--- a/team.html
+++ b/team.html
@@ -149,6 +149,8 @@ ul.task-list li input[type="checkbox"] {
 </figure>
 </div>
 <p>Wei-chen “Wade” Huang (B.S. Neuroscience) is pursuing his M.S. in Applied Cognition and Neuroscience with a concentration in Artificial Intelligence. During his undergraduate years, he was a National Merit Scholar. Aside from school, he is an avid basketball fan and also occasionally plays the violin.</p>
+<p><img src="sadman.png" class="img-fluid" style="width:50.0%" alt="Sadman Shafiq"> Sadman Shafiq is a Ph.D.&nbsp;student in Public Policy and Political Economy, with a distinct interest in the intersection of development policy, innovation policies, and their influence on economic growth in developing countries. With a background in Economics, He is continually exploring ways to deepen my understanding of how targeted policies can accelerate sustainable development and shape nations’ economic trajectories.</p>
+<p>He is also passionate about harnessing the power of cutting-edge technology in research. His interest lies in integrating machine learning and advanced data analytics into policy research. He aims to contribute to my field by generating innovative, data-driven insights into the role of innovation policies in the economic growth and development of nations. Apart from academic interests, he is also passionate about sports and literature.</p>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
 <p><img src="karlho2018.png" class="img-fluid figure-img" style="width:50.0%"></p>
